<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_24px"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_tv_24px"
        android:title="@string/title_tv_show" />

    <item
        android:id="@+id/navigation_movie_favorite"
        android:icon="@drawable/ic_movie_favorite_24px"
        android:title="@string/title_favorite_movie" />

    <item
        android:id="@+id/navigation_tv_show_favorite"
        android:icon="@drawable/ic_tv_favorite_24px"
        android:title="@string/title_favorite_tv_show" />

</menu>
